--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BACKEND_URL=https://usermanagementbackend-ecru.vercel.app/
+NEXT_PUBLIC_BACKEND_URL=https://usermanagementbackend-ecru.vercel.app
